fix: z-index fixes

--- a/src/application/assets/styles/index.scss
+++ b/src/application/assets/styles/index.scss
@@ -162,9 +162,4 @@ div.thin {
 .swal2-title { padding: 0 !important; }
 .swal2-actions { margin-top: 1em !important; }
 
-.swal2-icon {
-	width: 4em !important;
-	height: 4em !important;
-}
-
 /*! purgecss end ignore */
